# datatool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/datatool/: config.py  types.py
src/datatool/download/: download.py
src/datatool/files/: file_transfer_manager.py  files.py  transfer_strategies.py
src/datatool/paths/: paths.py  ssh_path.py
src/datatool/tools/: file_transfer_manager.py  files.py  paths.py  ssh_path.py  transfer_strategies.py
src/datatool/utils/: datetime.py  logger.py  utils.py
tests/: README.md  Readme.md  conftest.py  test_config.py
tests/files/: test_file_transfer_manager.py  test_files.py
tests/paths/: test_paths.py  test_ssh_path.py
tests/tools/: test_file_transfer_manager.py  test_files.py  test_paths.py
tests/utils/: test_datetime.py  test_logger.py  test_utils.py
